SDK-495: Fixing alignment of selfie image in profile.css for flask demo

--- a/examples/yoti_example_flask/static/profile.css
+++ b/examples/yoti_example_flask/static/profile.css
@@ -88,6 +88,9 @@
   width: 220px;
   height: 220px;
   border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .yoti-profile-picture-powered,
